# iam-prototypes

./: README.md  build.yaml  go.mod  go.sum  protos.json
auth/: auth.go
auth/casbin/: casbin.go  constants.go  read_only_adapter.go
auth/casbin/test/: casbin_test.go
auth/gorbac/: gorbac.go
auth/gorbac/test/: gorbac_test.go
auth/oso/: oso.go
auth/oso/test/: oso_test.go
casbin/: policy.csv
client/: client_test.go
gorbac/: gorbac_test.go
oso/: main.polar  oso_test.go
pb/: auth_config.go  proto.py  simple.pb.go  simple.proto
protos/: protos.py
protos/gogoproto/: BUILD.bazel
protos/google/api/: BUILD.bazel  http.proto
protos/google/protobuf/: BUILD.bazel  descriptor.proto  timestamp.proto
protos/google/protobuf/compiler/: BUILD.bazel
protos/otsimo/: auth.pb.go  auth.proto  format.pb.go  format.proto  helper.go  pagination.pb.go  pagination.proto
protos/protoc-gen-gofast/: obm.yaml
service/: config.go  grpc.go  server.go  service.go
service/daemon/: main.go
