proto_library(
    name = "types_proto",
    srcs = [
        "any.proto",
        "descriptor.proto",
        "duration.proto",
        "empty.proto",
        "field_mask.proto",
        "struct.proto",
        "timestamp.proto",
        "wrappers.proto",
    ],
    visibility = ["//visibility:public"],
)
